@@ -44,6 +44,10 @@ $configfile = "$prefix/config/ampache.cfg.php";
 require_once $prefix . '/lib/general.lib.php';
 require_once $prefix . '/lib/class/config.class.php';
 
+if (!function_exists('gettext')) {
+	require_once $prefix . '/modules/emulater/gettext.php';
+}
+
 // Define some base level config options
 Config::set('prefix',$prefix); 
 
